crates/aura-app/tests/ui/ui_operation_handle_private_fields.rs
use aura_app::scenario_contract::UiOperationHandle;
use aura_app::ui::contract::{OperationId, OperationInstanceId};

fn main() {
    let _handle = UiOperationHandle {
        id: OperationId::send_message(),
        instance_id: OperationInstanceId("instance-1".to_string()),
    };
}
